Fix text expander - correct text alignment is being applied

--- a/src/output.css
+++ b/src/output.css
@@ -655,6 +655,10 @@ video {
   width: 100%;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .max-w-\[1264px\] {
   max-width: 1264px;
 }
